--- a/JeffSite_WF_472/Views/Home/Index.cshtml
+++ b/JeffSite_WF_472/Views/Home/Index.cshtml
@@ -15,7 +15,7 @@
             </p>
         </div>
         <div style="text-align:right">
-            <a asp-action="BioCompleta">Saiba mais...</a>
+            @Html.ActionLink("Saiba mais...", "BioCompleta", "Home")
         </div>
     </div>
 
