--- a/JeffSite_WF_472/Views/Leitor/Index.cshtml
+++ b/JeffSite_WF_472/Views/Leitor/Index.cshtml
@@ -19,7 +19,7 @@
         {
             <div class="imgContainerMain">
                 <div class="imgContainer">
-                        <img src="../img/Leitor/@listLeitores[i].NameImg">
+                        <img src="../Content/img/Leitor/@listLeitores[i].NameImg">
                         <p>
                             @if(!string.IsNullOrEmpty(listLeitores[i].Nickname)){
                                 @listLeitores[i].Nickname
@@ -36,49 +36,51 @@
         </form>
        
     </div>
-    
+
     <!-- Envie sua imagem -->
     <div class="col-sm-4">
         <div class="Container">
             <h4 style="text-align: center;">Envie sua imagem</h4>
-            @if(!string.IsNullOrEmpty(sendMessage)){
+            @if (!string.IsNullOrEmpty(sendMessage))
+            {
                 <div class="alert alert-success" role="alert">
                     @sendMessage
                 </div>
             }
-            <form asp-controller="Leitor" asp-action="Index" enctype="multipart/form-data">
+
+            @using (Html.BeginForm("Index", "Leitor", FormMethod.Post, new { enctype = "multipart/form-data" }))
+            {
                 <div class="form-group">
-                    <label>@Html.DisplayNameFor(model => model.Name)</label>
-                    <input type="text" class="form-control" asp-for="Name">
-                    <span asp-validation-for="Name" class="text-danger"></span>
+                    <label>@Html.DisplayNameFor(Model => Model.Name)</label>
+                    @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", type = "text" } })
+                    @Html.ValidationMessageFor(x => x.Name)
                 </div>
                 <div class="form-group">
-                    <label>@Html.DisplayNameFor(model => model.Email)</label>
-                    <input type="email" class="form-control" asp-for="Email">
-                    <span asp-validation-for="Email" class="text-danger"></span>
+                    <label>@Html.DisplayNameFor(Model => Model.Email)</label>
+                    @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control", type = "email" } })
+                    @Html.ValidationMessageFor(x => x.Email)
                 </div>
                 <div class="form-group">
-                    <label>@Html.DisplayNameFor(model => model.Nickname)</label>
-                    <input type="text" class="form-control" asp-for="Nickname">
-                    <span asp-validation-for="Nickname" class="text-danger"></span>
+                    <label>@Html.DisplayNameFor(Model => Model.Nickname)</label>
+                    @Html.EditorFor(model => model.Nickname, new { htmlAttributes = new { @class = "form-control", type = "text" } })
+                    @Html.ValidationMessageFor(x => x.Nickname)
                 </div>
                 <div class="form-group">
-                    <label>@Html.DisplayNameFor(model => model.Birthday)</label>
-                    <input type="date" class="form-control" asp-for="Birthday">
+                    <label>@Html.DisplayNameFor(Model => Model.Birthday)</label>
+                    @Html.EditorFor(model => model.Birthday, new { htmlAttributes = new { @class = "form-control", type = "date" } })
                 </div>
                 <div class="form-group">
-                    <input type="hidden" asp-for="PathImg" value="../JeffSite/wwwroot/img/Leitor/">
-                    <label>@Html.DisplayNameFor(model => model.PathImg)</label>
-                    <input type="file" accept="image/*"  class="form-control" name="Img">
+                    <label>@Html.DisplayNameFor(Model => Model.PathImg)</label>
+                    @Html.EditorFor(model => model.NameImg, new { htmlAttributes = new { @class = "form-control", type = "hidden", @readonly = "readonly" } })
+                    @Html.EditorFor(model => model.PathImg, new { htmlAttributes = new { @class = "form-control", type = "file", accept = "image/*" } })
                     <small>Será aceita somente imagens até 5MB</small>
                     <span class="text-danger">@errorMessage</span>
                 </div>
                 <button type="submit" class="btn btn-info">Enviar</button>
-            </form>
-        </div>
-        <div class="alert alert-primary" role="alert" style="margin-top: 10px;">
-            Ao enviar sua foto, ela ainda será aprovada pelo administrador.
-        </div>
+                <div class="alert alert-primary" role="alert" style="margin-top: 10px;">
+                    Ao enviar sua foto, ela ainda será aprovada pelo administrador.
+                </div>
+            }
     </div>
     
   </div>
