--- a/JeffSite_WF_472/Views/Loja/Index.cshtml
+++ b/JeffSite_WF_472/Views/Loja/Index.cshtml
@@ -6,7 +6,7 @@
     @if (!string.IsNullOrEmpty(linkMercadoLivre))
     {
         <div class="mercado-livre">
-            <p>Conheça nossa loja no: <img src="img/MercadoLivreLogo.jpg" style="width: 30px"> <a href="@linkMercadoLivre" target="_blank">Mercado Livre</a></p>
+            <p>Conheça nossa loja no: <img src="~/Content/img/MercadoLivreLogo.jpg" style="width: 30px"> <a href="@linkMercadoLivre" target="_blank">Mercado Livre</a></p>
         </div>
     }
 
@@ -15,7 +15,7 @@
         <div class="row" style="margin-bottom: 20px; position: relative;">
             <div class="col-6 col-md-3">
                 <div class="fotoLivro">
-                    <img src="img/Livro/@item.ImgName" />
+                    <img src="Content/img/Livro/@item.ImgName" />
                 </div>
             </div>
             <div class="col-12 col-md-9">
