--- a/JeffSite_WF_472/Views/Loja/Edit.cshtml
+++ b/JeffSite_WF_472/Views/Loja/Edit.cshtml
@@ -1,39 +1,37 @@
 @model JeffSite_WF_472.Models.Livro.Livro
 @{
-    Layout = "~/Views/Shared/_LayoutLogin.cshtml";
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 <br>
 <h1>@ViewData["Title"]</h1>
 <br>
 
-<form asp-action="Edit" enctype="multipart/form-data" method="POST">
+@using (Html.BeginForm("Edit", "Loja", FormMethod.Post, new { enctype = "multipart/form-data" }))
+{
+    @Html.AntiForgeryToken()
     <div class="form-group">
-        <label>@Html.DisplayNameFor(Model => Model.Title)</label>
-        <input type="text" class="form-control" asp-for="Id" readonly>
+        <label>@Html.DisplayNameFor(Model => Model.Id)</label>
+        @Html.EditorFor(model => model.Id, new { htmlAttributes = new { @class = "form-control", type = "text", @readonly = "readonly" } })
     </div>
     <div class="form-group">
         <label>@Html.DisplayNameFor(Model => Model.Title)</label>
-        <input type="text" class="form-control" asp-for="Title">
-        <span asp-validation-for="Title" class="text-danger"></span>
+        @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control", type = "text" } })
+        @Html.ValidationMessageFor(x => x.Title)
     </div>
     <div class="form-group">
         <label>@Html.DisplayNameFor(Model => Model.Description)</label>
-        <input type="text" class="form-control" asp-for="Description">
-        <span asp-validation-for="Description" class="text-danger"></span>
+        @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control", type = "text" } })
+        @Html.ValidationMessageFor(x => x.Description)
     </div>
     <div class="form-group">
         <label>@Html.DisplayNameFor(Model => Model.ImgName)</label>
-        <input type="file" accept="image/*" class="form-control" name="Img" >
-        <input type="hidden" class="form-control" asp-for="ImgName">
-        <span asp-validation-for="ImgName" class="text-danger"></span>
+        @Html.EditorFor(model => model.ImgName, new { htmlAttributes = new { @class = "form-control", type = "file", accept = "image/*" } })
+        @Html.ValidationMessageFor(x => x.ImgName)
     </div>
-
-    @if(Model.Esgotado){
-      <input type="checkbox" class="form-control" asp-for="Esgotado" checked>
-    }else{
-      <input type="checkbox" class="form-control" asp-for="Esgotado" >
-    }
-    
-    <a asp-controller="Loja" asp-action="ListLivros">Voltar</a>
-    <button class="btn btn-primary">Editar</button>
-</form>
+    <div class="form-group">
+        <label>@Html.DisplayNameFor(Model => Model.Esgotado)</label>
+        @Html.EditorFor(model => model.Esgotado, new { htmlAttributes = new { @class = "form-control", type = "checkbox" } })
+    </div>
+    @Html.ActionLink("Voltar", "ListLivros", "Loja")
+    <button class="btn btn-primary" type="submit">Editar</button>
+}
