--- a/JeffSite_WF_472/Views/Loja/ListLivros.cshtml
+++ b/JeffSite_WF_472/Views/Loja/ListLivros.cshtml
@@ -1,49 +1,52 @@
 @model IEnumerable<JeffSite_WF_472.Models.Livro.Livro>
 @{
-    Layout = "~/Views/Shared/_LayoutLogin.cshtml";
-    string pathImg = System.IO.Path.Combine("..","img","Livro");
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
+    string pathImg = System.IO.Path.Combine("..", "img", "Livro");
 }
 
 <br>
 <h1>@ViewData["Title"]</h1>
 <br>
 
-<a class="btn btn-primary" asp-action="Create">Criar</a>
+@Html.ActionLink("Criar", "Create", "Loja", new { @class = "btn btn-primary" })
 <br>
 
 <table class="table table-striped">
-  <thead>
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">@Html.DisplayNameFor(Model => Model.Id)</th>
-      <th scope="col">@Html.DisplayNameFor(Model => Model.Title)</th>
-      <th scope="col">@Html.DisplayNameFor(Model => Model.Esgotado)</th>
-      <th scope="col">@Html.DisplayNameFor(Model => Model.ImgName)</th>
-    </tr>
-  </thead>
-  <tbody>
-      @foreach (var item in Model)
-      {
-          <tr>
-            <th scope="row">
-                @Html.ActionLink("Editar", "Edit", new { id = item.Id })
+    <thead>
+        <tr>
+            <th scope="col">#</th>
+            <th scope="col">@Html.DisplayNameFor(x => x.Id)</th>
+            <th scope="col">@Html.DisplayNameFor(x => x.Title)</th>
+            <th scope="col">@Html.DisplayNameFor(x => x.Esgotado)</th>
+            <th scope="col">@Html.DisplayNameFor(x => x.ImgName)</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <th scope="row">
+                    @Html.ActionLink("Editar", "Edit", new { id = item.Id })
                     @Html.Label(" | ")
                     @Html.ActionLink("Deletar", "Delete", new { id = item.Id })
                     @Html.Label(" | ")
                     @Html.ActionLink("Links", "CreateWhereToBuy", new { id = item.Id })
-            </th>
-            <td>@Html.DisplayFor(modelItem => item.Id)</td>
-            <td>@Html.DisplayFor(modelItem => item.Title)</td>
-            <td>
-              @if(item.Esgotado){
-                <input type="checkbox" class="form-control" disabled checked>
-              }else{
-                <input type="checkbox" class="form-control" disabled>
-              }
-            </td>
-            <td><img src="@pathImg\\@item.ImgName" style="width:100px;"></td>
-            
-        </tr>
-      }
-  </tbody>
+                </th>
+                <td>@Html.DisplayFor(modelItem => item.Id)</td>
+                <td>@Html.DisplayFor(modelItem => item.Title)</td>
+                <td>
+                    @if (item.Esgotado)
+                    {
+                        <input type="checkbox" class="form-control" disabled checked>
+                    }
+                    else
+                    {
+                        <input type="checkbox" class="form-control" disabled>
+                    }
+                </td>
+                <td><img src="~/Content/img/Livro/@item.ImgName" style="width:100px;"></td>
+
+            </tr>
+        }
+    </tbody>
 </table>
