--- a/JeffSite_WF_472/Views/Loja/EditWhereToBuy.cshtml
+++ b/JeffSite_WF_472/Views/Loja/EditWhereToBuy.cshtml
@@ -1,40 +1,44 @@
 @model JeffSite_WF_472.Models.Livro.WhereToBuy
 @{
-    Layout = "~/Views/Shared/_LayoutLogin.cshtml";
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
-<script src="lib/jquery/dist/jquery.min.js"></script>
+<script src="~/Scripts/jquery/dist/jquery.min.js"></script>
 <br>
 <h1>@ViewData["Title"]</h1>
 
-<form asp-controller="Loja" asp-action="EditWhereToBuy" method="POST" >
-<div class="form-group">
-        <label>@Html.DisplayNameFor(Model => Model.Livro.Id)</label>
-        <input type="hidden" class="form-control" asp-for="Livro.Id" readonly>
-        <input type="text" class="form-control" asp-for="Livro.Title" readonly>
+
+@using (Html.BeginForm("EditWhereToBuy", "Loja", FormMethod.Post))
+{
+    <div class="form-group">
+        <label>@Html.DisplayNameFor(Model => Model.Livro.Title)</label>
+        @Html.EditorFor(model => model.Id, new { htmlAttributes = new { @class = "form-control", type = "hidden", @readonly = "readonly" } })
+        @Html.EditorFor(model => model.Livro.Id, new { htmlAttributes = new { @class = "form-control", type = "hidden", @readonly = "readonly" } })
+        @Html.EditorFor(model => model.Livro.Title, new { htmlAttributes = new { @class = "form-control", type = "text", @readonly = "readonly" } })
     </div>
     <div class="input-group-prepend">
         <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="btnIcon">
-            <label id="label-icon"><i class="@Html.DisplayFor(m => m.IconFA)"></i></label>
+            <span id="label-icon"><i class="@Html.DisplayFor(m => m.IconFA)"></i></span>
         </button>
         <div class="dropdown-menu">
-            <a class="dropdown-item" onclick="changeIcon('Amazon','fab fa-amazon')" href="#"><i class="fab fa-amazon"></i></i> Amazon</a>
+            <a class="dropdown-item" onclick="changeIcon('Amazon','fab fa-amazon')" href="#"><i class="fab fa-amazon"></i> Amazon</a>
             <a class="dropdown-item" onclick="changeIcon('Submarino','fas fa-shopping-bag')" href="#"><i class="fas fa-shopping-bag"></i> Submarino</a>
             <a class="dropdown-item" onclick="changeIcon('Americanas','fas fa-shopping-basket')" href="#"><i class="fas fa-shopping-basket"></i> Americanas</a>
             <a class="dropdown-item" onclick="changeIcon('Mercado Livre','fas fa-shopping-cart')" href="#"><i class="fas fa-shopping-cart"></i> Mercado Livre</a>
             <a class="dropdown-item" onclick="changeIcon('Extra','fas fa-cart-arrow-down')" href="#"><i class="fas fa-cart-arrow-down"></i> Extra</a>
             <a class="dropdown-item" onclick="changeIcon('Outros','fas fa-store-alt')" href="#"><i class="fas fa-store-alt"></i> Outros</a>
         </div>
-        <input type="text" class="form-control" id="name" asp-for="Name" style="width: 150px;">
-        <input type="hidden" class="form-control" id="iconFA" asp-for="IconFA" readonly>
-        <input type="text" class="form-control" id="url" placeholder="Url" asp-for="UrlEndereco">
+        @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", type = "text", style = "width: 150px" } })
+        @Html.EditorFor(model => model.IconFA, new { htmlAttributes = new { @class = "form-control", type = "hidden", @readonly = "readonly" } })
+        @Html.EditorFor(model => model.UrlEndereco, new { htmlAttributes = new { @class = "form-control", type = "text" } })
+
     </div>
-    <a asp-action="createWhereToBuy" asp-controller="Loja" asp-route-id="@Model.Livro.Id" >Voltar</a>
+    @Html.ActionLink("Voltar", "createWhereToBuy", "Loja")
     <button type="submit" class="btn btn-primary" style="margin-bottom: 20px;margin-top: 10px;">Salvar</button>
-</form>
+}
 
-    <script>
+<script>
 
-    function changeIcon(name,icon){
+    function changeIcon(name, icon) {
         //console.log(name + " - " + icon)
         const txtName = document.getElementById('name')
         const txtIconFA = document.getElementById('iconFA')
@@ -43,11 +47,12 @@
         txtName.value = name
         txtIconFA.value = icon
 
-        if(lIcon === ""){
+        if (lIcon === "") {
             lIcon.value = "Icone"
-        }else{
+        }
+        else {
             lIcon.value = ""
-            lIcon.innerHTML = `<i class="${icon}"></i>`
+            lIcon.innerHTML = `< i class="${icon}"></i>`
         }
     }
 
