--- a/JeffSite_WF_472/Views/Loja/ListLivros.cshtml
+++ b/JeffSite_WF_472/Views/Loja/ListLivros.cshtml
@@ -30,7 +30,7 @@
                     @Html.Label(" | ")
                     @Html.ActionLink("Deletar", "Delete", new { id = item.Id })
                     @Html.Label(" | ")
-                    @Html.ActionLink("Links", "CreateWhereToBuy", new { id = item.Id })
+                    @Html.ActionLink("Links", "ManagerWhereToBuy", new { id = item.Id })
                 </th>
                 <td>@Html.DisplayFor(modelItem => item.Id)</td>
                 <td>@Html.DisplayFor(modelItem => item.Title)</td>
