--- a/JeffSite/Views/Loja/DeleteWhereToBuy.cshtml
+++ b/JeffSite/Views/Loja/DeleteWhereToBuy.cshtml
@@ -17,7 +17,7 @@
             <label id="label-icon"><i class="@Html.DisplayFor(m => m.IconFA)"></i></label>
         </button>
         <div class="dropdown-menu">
-            <a class="dropdown-item" onclick="changeIcon('Amazon','fab fa-amazon')" href="#"><i class="fab fa-amazon"></i></i> Amazon</a>
+            <a class="dropdown-item" onclick="changeIcon('Amazon','fab fa-amazon')" href="#"><i class="fab fa-amazon"></i> Amazon</a>
             <a class="dropdown-item" onclick="changeIcon('Submarino','fas fa-shopping-bag')" href="#"><i class="fas fa-shopping-bag"></i> Submarino</a>
             <a class="dropdown-item" onclick="changeIcon('Americanas','fas fa-shopping-basket')" href="#"><i class="fas fa-shopping-basket"></i> Americanas</a>
             <a class="dropdown-item" onclick="changeIcon('Mercado Livre','fas fa-shopping-cart')" href="#"><i class="fas fa-shopping-cart"></i> Mercado Livre</a>
