--- a/JeffSite_WF_472/Views/Loja/PedidoAddInfo.cshtml
+++ b/JeffSite_WF_472/Views/Loja/PedidoAddInfo.cshtml
@@ -1,56 +1,59 @@
 @model JeffSite_WF_472.Models.Loja.Pedido
 @{
-    Layout = "~/Views/Shared/_LayoutLogin.cshtml";
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
     int status = (int)Model.Status;
+    string linkpagamento = Model.LinkPagamento;
 }
 
 <br>
 <h1>@ViewData["Title"]</h1>
 <br>
 
-<form asp-action="PedidoAddInfo" method="POST">
-    <input type="hidden" class="form-control" asp-for="Status">
-    <input type="hidden" class="form-control" asp-for="Id">
-    <input type="hidden" class="form-control" asp-for="LivroId">
-    <input type="hidden" class="form-control" asp-for="Nome">
-    <input type="hidden" class="form-control" asp-for="NomeDedicado">
-    <input type="hidden" class="form-control" asp-for="Numero">
-    <input type="hidden" class="form-control" asp-for="Bairro">
-    <input type="hidden" class="form-control" asp-for="CEP">
-    <input type="hidden" class="form-control" asp-for="Cidade">
-    <input type="hidden" class="form-control" asp-for="Complemento">
-    <input type="hidden" class="form-control" asp-for="Email">
-    <input type="hidden" class="form-control" asp-for="Endereco">
+@using (Html.BeginForm("PedidoAddInfo", "Loja", FormMethod.Post))
+{
+    @Html.AntiForgeryToken()
+    @Html.EditorFor(model => model.Status, new { htmlAttributes = new { @class = "form-control", type = "hidden" } })
+    @Html.EditorFor(model => model.Id, new { htmlAttributes = new { @class = "form-control", type = "hidden" } })
+    @Html.EditorFor(model => model.LivroId, new { htmlAttributes = new { @class = "form-control", type = "hidden" } })
+    @Html.EditorFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control", type = "hidden" } })
+    @Html.EditorFor(model => model.NomeDedicado, new { htmlAttributes = new { @class = "form-control", type = "hidden" } })
+    @Html.EditorFor(model => model.Numero, new { htmlAttributes = new { @class = "form-control", type = "hidden" } })
+    @Html.EditorFor(model => model.Bairro, new { htmlAttributes = new { @class = "form-control", type = "hidden" } })
+    @Html.EditorFor(model => model.CEP, new { htmlAttributes = new { @class = "form-control", type = "hidden" } })
+    @Html.EditorFor(model => model.Cidade, new { htmlAttributes = new { @class = "form-control", type = "hidden" } })
+    @Html.EditorFor(model => model.Complemento, new { htmlAttributes = new { @class = "form-control", type = "hidden" } })
+    @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control", type = "hidden" } })
+    @Html.EditorFor(model => model.Endereco, new { htmlAttributes = new { @class = "form-control", type = "hidden" } })
 
-    @if (!string.IsNullOrEmpty(Model.LinkPagamento))
+    if (!string.IsNullOrEmpty(linkpagamento))
     {
-        <input type="hidden" class="form-control" asp-for="LinkPagamento">
+        @Html.EditorFor(model => model.LinkPagamento, new { htmlAttributes = new { @class = "form-control", type = "hidden" } })
     }
 
     <div class="form-group">
         @switch (status)
         {
             case 1:
-                <label>@Html.DisplayNameFor(Model => Model.LinkPagamento)</label>
-                <input type="text" class="form-control" asp-for="LinkPagamento">
+                <label>Link de Pagamento</label>
+                @Html.EditorFor(model => model.LinkPagamento, new { htmlAttributes = new { @class = "form-control", type = "text", value = "http://" } })
                 break;
             case 2:
                 <label>Foi Pago</label>
                 <select class="form-control" id="outrosStatus" name="outrosStatus">
                     <option value="PagoSim">Sim</option>
-                    <option value="PagoNao">Não</option>
+                    <option value="PagoNao">Nao</option>
                 </select>
                 break;
             case 3:
                 <label>Foi dedicado para: <b><i>@Model.NomeDedicado</i></b></label>
                 <select class="form-control" id="outrosStatus" name="outrosStatus">
                     <option value="DedicadoSim">Sim</option>
-                    <option value="DedicadoNao">Não</option>
+                    <option value="DedicadoNao">Nao</option>
                 </select>
                 break;
             case 4:
-                <label>@Html.DisplayNameFor(Model => Model.LinkRastreio)</label>
-                <input type="text" class="form-control" asp-for="LinkRastreio">
+    <label>Link/Codigo do Rastreio</label>
+                @Html.EditorFor(model => model.LinkRastreio, new { htmlAttributes = new { @class = "form-control", type = "text" } })
                 break;
         }
         @if (ViewBag.Erro != null)
@@ -58,8 +61,7 @@
             <span class="text-danger">@ViewBag.Erro</span>
         }
         <br>
-        <a asp-controller="Loja" asp-action="Pedido">Voltar</a>
-        <button class="btn btn-primary">Salvar</button>
+        @Html.ActionLink("Voltar", "Pedido", "Loja")
+        <button class="btn btn-primary" type="submit">Salvar</button>
     </div>
-
-</form>
+}
