ajuste senha nao null

--- a/JeffSite_WF_472/Views/Admin/ChangePassword.cshtml
+++ b/JeffSite_WF_472/Views/Admin/ChangePassword.cshtml
@@ -1,6 +1,7 @@
 @model JeffSite_WF_472.Models.User
 @{
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
+    string message = ViewBag.Message;
 }
 
 @using (Html.BeginForm("ChangePassword", "Admin"))
@@ -10,9 +11,12 @@
     <div class="form-group">
         <label for="exampleInputPassword1">Senha</label>
         @*<input type="password" class="form-control" placeholder="Senha" asp-for="Pass">*@
-        @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control", type = "hidden"} })
+        @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control", type = "hidden" } })
         @Html.EditorFor(model => model.Pass, new { htmlAttributes = new { @class = "form-control", type = "password" } })
-        <span asp-validation-for="Pass" class="text-danger"></span>
+        @if (!string.IsNullOrEmpty(message))
+        {
+            <span class="alert-danger">@message</span>
+        }
     </div>
     <button type="submit" class="btn btn-primary">Alterar</button>
 }
