--- a/JeffSite_WF_472/Views/Carousel/Create.cshtml
+++ b/JeffSite_WF_472/Views/Carousel/Create.cshtml
@@ -13,7 +13,7 @@
     <div class="form-group">
         <label>@Html.DisplayNameFor(Model => Model.Title)</label>
         @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control", type = "text" } })
-        @Html.ValidationMessageFor(x => x.Title)
+        @Html.ValidationMessageFor(x => x.Title, "", new { @class = "text-danger" } )
     </div>
     <div class="form-group">
         <label>@Html.DisplayNameFor(Model => Model.Description)</label>
@@ -21,7 +21,7 @@
     </div>
     <div class="form-group">
         <label>@Html.DisplayNameFor(Model => Model.Link)</label>
-        @Html.EditorFor(model => model.Link, new { htmlAttributes = new { @class = "form-control", type = "text", value = "http://" } })
+        @Html.EditorFor(model => model.Link, new { htmlAttributes = new { @class = "form-control", type = "text", @value = "http://" } })
     </div>
     <div class="form-group">
         <label>@Html.DisplayNameFor(Model => Model.ExpirationDate)</label>
@@ -31,8 +31,8 @@
     <div class="form-group">
         <label>@Html.DisplayNameFor(Model => Model.Image)</label>
         @Html.EditorFor(model => model.Image, new { htmlAttributes = new { @class = "form-control", type = "file", accept = "image/*" } })
-        <small>Por favor, incluir imagens com no maximo <b>800px</b> de largura e <b>400px</b> de altura</small>
-        @Html.ValidationMessageFor(x => x.Image)
+        <small>Por favor, incluir imagens com no maximo <b>800px</b> de largura e <b>400px</b> de altura</small><br>
+        @Html.ValidationMessageFor(x => x.Image, "", new { @class = "text-danger" })
     </div>
     @Html.EditorFor(model => model.PathImage, new { htmlAttributes = new { @class = "form-control", type = "hidden", @readonly = "readonly" } })
     @Html.ActionLink("Voltar", "Index", "Carousel")
