--- a/JeffSite_WF_472/Views/Carousel/Edit.cshtml
+++ b/JeffSite_WF_472/Views/Carousel/Edit.cshtml
@@ -12,7 +12,7 @@
     <div class="form-group">
         <label>@Html.DisplayNameFor(Model => Model.Title)</label>
         @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control", type = "text" } })
-        @Html.ValidationMessageFor(x => x.Title)
+        @Html.ValidationMessageFor(x => x.Title, "", new { @class = "text-danger" })
     </div>
     <div class="form-group">
         <label>@Html.DisplayNameFor(Model => Model.Description)</label>
@@ -24,25 +24,21 @@
     </div>
     <div class="form-group">
         <label>@Html.DisplayNameFor(Model => Model.ExpirationDate)</label>
-        @Html.EditorFor(model => model.ExpirationDate.Value, new { htmlAttributes = new { @class = "form-control", type = "date" } })
+        @Html.EditorFor(model => model.ExpirationDate, new { htmlAttributes = new { @class = "form-control", type = "date" } })
         <small>Se nao estiver preenchido, ficara para sempre na tela</small>
     </div>
     <div class="form-group">
         <label>@Html.DisplayNameFor(Model => Model.Image)</label>
         @Html.EditorFor(model => model.Image, new { htmlAttributes = new { @class = "form-control", type = "file", accept = "image/*" } })
-        <small>Por favor, incluir imagens com no maximo <b>800px</b> de largura e <b>400px</b> de altura</small>
-        @Html.ValidationMessageFor(x => x.Image)
+        <small>Por favor, incluir imagens com no maximo <b>800px</b> de largura e <b>400px</b> de altura</small><br>
+        @Html.ValidationMessageFor(x => x.Image, "", new { @class = "text-danger" })
     </div>
     @Html.EditorFor(model => model.Image, new { htmlAttributes = new { @class = "form-control", type = "hidden", @readonly = "readonly" } })
     @Html.ActionLink("Voltar", "Index", "Carousel")
     <button class="btn btn-primary" type="submit">Salvar</button>
 }
 
-<script>
-    document.getElementById('img').addEventListener('change', changeImg);
-    function changeImg() {
-        var img = document.getElementById('img').value
-        var image = document.getElementById('Image')
-        image.value = img
-    }
-</script>
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
+
