ajuste endpoinbt add pedido

--- a/JeffSite_WF_472/Views/Loja/Index.cshtml
+++ b/JeffSite_WF_472/Views/Loja/Index.cshtml
@@ -160,7 +160,7 @@
             console.log(JSON.stringify(pedido))
 
             $.ajax({
-                url: "AddPedido",
+                url: "Loja/AddPedido",
                 method: "POST",
                 type: "json",
                 contentType: "application/json; charset=UTF-8",
