--- a/JeffSite_WF_472/Views/Loja/Pedido.cshtml
+++ b/JeffSite_WF_472/Views/Loja/Pedido.cshtml
@@ -23,7 +23,7 @@
       <option value="" >Selecione um tipo</option>
       <option value="Aguardando_Link_De_Pagamento">Aguardando Link de Pagamento</option>
       <option value="Aguardando_Pagamento">Aguardando Pagamento</option>
-      <option value="Pago_e_Aguardando_Dedicatorio">Pago e Aguardando dedicatório</option>
+      <option value="Pago_e_Aguardando_Dedicatorio">Pago e Aguardando dedicatorio</option>
       <option value="Aguardando_Postagem">Aguardando Codigo ou Link de Rastreio</option>
       <option value="Enviado">Enviado</option>
     </select>
