--- a/JeffSite_WF_472/Views/Malling/EnviarEmailMailling.cshtml
+++ b/JeffSite_WF_472/Views/Malling/EnviarEmailMailling.cshtml
@@ -71,7 +71,7 @@
                     ['clean']
                 ]
             },
-            placeholder: 'Digite o cordo do email aqui',
+            placeholder: 'Digite o corpo do email aqui',
             theme: 'snow'  // or 'bubble'
         });
 
