--- a/JeffSite_WF_472/Views/Shared/_LayoutAdmin.cshtml
+++ b/JeffSite_WF_472/Views/Shared/_LayoutAdmin.cshtml
@@ -28,7 +28,7 @@
                             @Html.ActionLink("HOME", "AdminHome", "Admin", null, new { @style = "padding-left: 3.5em;", @class = "nav-link" })
                         </li>
                         <li class="nav-item">
-                            @Html.ActionLink("Carousel", "Index", "Carousel", null, new { @class = "nav-link" })
+                            @Html.ActionLink("Carrossel", "Index", "Carousel", null, new { @class = "nav-link" })
                         </li>
                         <li class="nav-item">
                             @Html.ActionLink("Redes Sociais", "Index", "SocialMidia", null, new { @class = "nav-link" })
@@ -61,6 +61,7 @@
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 @Html.ActionLink("do Site", "Index", "Configuracao", null, new { @style = "padding-left: 3.5em;", @class = "dropdown-item" })
                                 @Html.ActionLink("do Email", "confEmail", "Configuracao", null, new { @style = "padding-left: 3.5em;", @class = "dropdown-item" })
+                                @Html.ActionLink("da Biografia", "Biografia", "Configuracao", null, new { @style = "padding-left: 3.5em;", @class = "dropdown-item" })
                             </div>
                         </li>
                         <li class="nav-item dropdown">
